; ModuleID = '/home/carl/AnghaBench/mpv/audio/extr_audio_buffer.c_mp_audio_buffer_append.c'
source_filename = "/home/carl/AnghaBench/mpv/audio/extr_audio_buffer.c_mp_audio_buffer_append.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_audio_buffer = type { i64, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mp_audio_buffer_append(%struct.mp_audio_buffer* %0, i8** %1, i32 %2) #0 {
  %4 = alloca %struct.mp_audio_buffer*, align 8
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  store %struct.mp_audio_buffer* %0, %struct.mp_audio_buffer** %4, align 8
  store i8** %1, i8*** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.mp_audio_buffer*, %struct.mp_audio_buffer** %4, align 8
  %8 = load %struct.mp_audio_buffer*, %struct.mp_audio_buffer** %4, align 8
  %9 = getelementptr inbounds %struct.mp_audio_buffer, %struct.mp_audio_buffer* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i32, i32* %6, align 4
  %12 = sext i32 %11 to i64
  %13 = add nsw i64 %10, %12
  %14 = call i32 @mp_audio_buffer_preallocate_min(%struct.mp_audio_buffer* %7, i64 %13)
  %15 = load %struct.mp_audio_buffer*, %struct.mp_audio_buffer** %4, align 8
  %16 = load %struct.mp_audio_buffer*, %struct.mp_audio_buffer** %4, align 8
  %17 = getelementptr inbounds %struct.mp_audio_buffer, %struct.mp_audio_buffer* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 8
  %19 = load %struct.mp_audio_buffer*, %struct.mp_audio_buffer** %4, align 8
  %20 = getelementptr inbounds %struct.mp_audio_buffer, %struct.mp_audio_buffer* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = load i8**, i8*** %5, align 8
  %23 = bitcast i8** %22 to i32**
  %24 = load i32, i32* %6, align 4
  %25 = call i32 @copy_planes(%struct.mp_audio_buffer* %15, i32 %18, i64 %21, i32** %23, i32 0, i32 %24)
  %26 = load i32, i32* %6, align 4
  %27 = sext i32 %26 to i64
  %28 = load %struct.mp_audio_buffer*, %struct.mp_audio_buffer** %4, align 8
  %29 = getelementptr inbounds %struct.mp_audio_buffer, %struct.mp_audio_buffer* %28, i32 0, i32 0
  %30 = load i64, i64* %29, align 8
  %31 = add nsw i64 %30, %27
  store i64 %31, i64* %29, align 8
  ret void
}

declare dso_local i32 @mp_audio_buffer_preallocate_min(%struct.mp_audio_buffer*, i64) #1

declare dso_local i32 @copy_planes(%struct.mp_audio_buffer*, i32, i64, i32**, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
